# cassobs-lib

./: .gitignore  AUTHORS  Doxyfile.in  Makefile.am  README  cassobs.pc.in  configure.ac
src/: Makefile.am  cassandra_stmt_ptr.h  cassuuid_operators.h  dbconnection.cpp  dbconnection.h  dbconnection_common.cpp  dbconnection_common.h  dbconnection_jobs.cpp  dbconnection_jobs.h  dbconnection_minmax.cpp  dbconnection_minmax.h  dbconnection_month_minmax.cpp  dbconnection_month_minmax.h  dbconnection_normals.cpp  dbconnection_normals.h  dbconnection_observations.cpp  dbconnection_observations.h  dbconnection_records.cpp  dbconnection_records.h  download.h  filter.h  map_observation.h  modem_station_configuration.h  monthly_records.cpp  monthly_records.h  nbiot_station.h  normals.h  observation.cpp  observation.h  virtual_station.h
src/tests/: compute_minmax.cpp  compute_month_minmax.cpp  compute_records.cpp  get_cimel_stations.cpp  get_config.cpp  get_fieldclimate_stations.cpp  get_jobs.cpp  get_last_data.cpp  get_liveobjects_stations.cpp  get_map_obs.cpp  get_meteofrance_stations.cpp  get_mqtt_stations.cpp  get_nbiot_stations.cpp  get_normals.cpp  get_objenious_stations.cpp  get_rainfall.cpp  get_virtual_stations.cpp  get_wlv2_stations.cpp  insert_download.cpp  insert_timescaledb.cpp
